--- a/Push_swap/Makefile
+++ b/Push_swap/Makefile
@@ -5,55 +5,72 @@
 #                                                     +:+ +:+         +:+      #
 #    By: dconza <dconza@student.42lausanne.ch>      +#+  +:+       +#+         #
 #                                                 +#+#+#+#+#+   +#+            #
-#    Created: 2023/12/02 12:20:25 by dconza            #+#    #+#              #
-#    Updated: 2023/12/17 19:49:56 by dconza           ###   ########.fr        #
+#    Created: 2022/07/23 13:48:18 by yogun             #+#    #+#              #
+#    Updated: 2023/12/17 22:08:57 by dconza           ###   ########.fr        #
 #                                                                              #
 # **************************************************************************** #
 
 NAME = push_swap
 CC = gcc
-HEADER = push_swap.h
 RM = rm -f
 FLAGS = -Wall -Wextra -Werror
+LIBFTDIR = libft/
 OBJ_DIR = obj/
-SRC_DIR = sources/
+BONUS = checker
+SRC_DIR = srcs/
 
-SRC_1 = sources/push_swap.c \
+SRC_1 = srcs/push_swap/push_swap.c \
 
-SRC_2 =	sources/checkeur.c \
-		sources/checkeur_bis.c \
-		sources/ft_add.c \
-		sources/function_rotate.c \
-		sources/operation_stack.c \
-		sources/rules_1.c \
-		sources/rules_2.c \
-		sources/rules_3.c \
-		sources/rules_4.c \
-		sources/solver_utils.c \
-		sources/solver_utils_bis.c \
-		sources/solver.c \
-		sources/sort.c \
-		sources/utils.c \
-		sources/utils_bis.c \
-		sources/test.c \
+SRC_2 =	srcs/push_swap/algorithm.c \
+		srcs/push_swap/ft_add_back.c \
+		srcs/push_swap/ft_stack_new.c \
+		srcs/push_swap/ft_check_utils.c \
+		srcs/push_swap/ft_parse.c \
+		srcs/push_swap/solver_utils_ab.c \
+		srcs/push_swap/solver_utils_ba.c \
+		srcs/push_swap/ft_rotate_and_push.c \
+		srcs/push_swap/operations.c \
+		srcs/push_swap/operations_2.c \
+		srcs/push_swap/operations_3.c \
+		srcs/push_swap/ft_check_dup.c \
+		srcs/push_swap/ft_check_sorted.c \
+		srcs/push_swap/ft_error_print.c \
+		srcs/push_swap/ft_free.c \
+		srcs/push_swap/lst_utils.c \
+		srcs/push_swap/lst_utils_2.c \
+		srcs/push_swap/ft_parse_args_quoted.c \
+		srcs/push_swap/ft_list_args.c \
+		srcs/push_swap/ft_check_args.c \
+		srcs/push_swap/ft_sort_big.c \
+		srcs/push_swap/ft_sort_three.c \
+		srcs/push_swap/ft_rotate_type.c \
+
+BONUS_SRC = srcs/checker/checker.c \
+			srcs/checker/checker_utils.c \
+
 
 OBJ_1 = ${SRC_1:.c=.o}
 OBJ_2 = ${SRC_2:.c=.o}
+
+INCLUDE = -L ./libft -lft
 
 .c.o:
 	${CC} -c $< -o ${<:.c=.o}
 
 ${NAME}: ${OBJ_1} ${OBJ_2}
+	make -C $(LIBFTDIR)
 	${CC} ${FLAGS} ${OBJ_1} ${OBJ_2} -o ${NAME} ${INCLUDE}
 
-all: ${NAME} $
+all: ${NAME}
 
 clean:
 	${RM} ${OBJ_1} ${OBJ_2} ${BONUS_OBJ} ${NAME}
+	@cd $(LIBFTDIR) && $(MAKE) clean
 
 fclean: clean
 	${RM} ${NAME}
+	@cd $(LIBFTDIR) && $(MAKE) fclean
 
 re: clean all
 
-.PHONY: all clean fclean re
+.PHONY: all clean fclean re bonus
